--- a/package.json
+++ b/package.json
@@ -1,23 +1,16 @@
 {
-  "name": "trivia-frontend",
+  "name": "trivia-backend",
   "version": "1.0.0",
-  "private": true,
   "type": "module",
+  "main": "index.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --port=4173 --host"
+    "start": "node index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.1.0",
-    "qrcode": "^1.5.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "socket.io": "^4.8.1"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^5.0.0"
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
+    "qrcode": "^1.5.1",
+    "socket.io": "^4.7.2"
   }
 }
